@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-17T08:25:12Z",
+  "timestamp" : "2022-09-17T16:27:54Z",
   "count_outdated" : 2421,
   "uniques_outdated" : 593,
-  "count" : 2455,
+  "count" : 2456,
   "uniques" : 616,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-09-17T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
