@@ -1,3 +1,11 @@
+2022-09-17T16:27:54Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3074022417
+* notice: last 14d: unq all: 12 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 593 2421 / 616 2455
+* notice: next accum: outdated-unq outdated-all / unq all: 593 2421 / 616 2456
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-09-17]
+
 2022-09-17T08:25:12Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3072693532
 * notice: last 14d: unq all: 12 34
